OEL-4850: Cleanup, comments and changed endpoint route.
